<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <ImageView
        android:id="@+id/placeholder_image"
        android:layout_width="330dp"
        android:layout_height="330dp"

        android:src="@drawable/default_place_holder_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:contentDescription="@string/description_placeholder_image" />

    <ImageView
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/android_elephant_popup_wide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/description_background_image" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?actionBarItemBackground"
        android:src="@drawable/btn_close_blue"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        android:contentDescription="@string/description_backpress_image_button" />

    <LinearLayout
        android:id="@+id/upLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/baby_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/title_baby_page"
            android:textAlignment="center"
            android:textColor="#515151"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/number_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/five"
        app:layout_constraintEnd_toStartOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/upLayout"
        android:contentDescription="@string/description_baby_age_image" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/left_swirls"
        app:layout_constraintEnd_toStartOf="@+id/number_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background_view"
        app:layout_constraintTop_toBottomOf="@+id/upLayout"
        android:contentDescription="@string/description_left_swirls" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/right_swirls"
        app:layout_constraintEnd_toStartOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_image_view"
        app:layout_constraintTop_toBottomOf="@+id/upLayout"
        android:contentDescription="@string/description_right_swirls" />

    <TextView
        android:id="@+id/months_years_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#515151"
        android:textSize="22sp"
        android:text="@string/title_baby_months_old"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_image_view" />


    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:src="@drawable/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/months_years_text_view"
        android:contentDescription="@string/description_share_button_image" />

    <TextView
        android:id="@+id/share_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/title_share_the_news_button"
        android:textColor="#EF7B7B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/share_button"
        app:layout_constraintEnd_toStartOf="@+id/share_icon"
        app:layout_constraintStart_toStartOf="@+id/share_button"
        app:layout_constraintTop_toTopOf="@+id/share_button" />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/ic_share_pink"
        app:layout_constraintBottom_toBottomOf="@+id/share_button"
        app:layout_constraintEnd_toEndOf="@+id/share_button"
        app:layout_constraintTop_toTopOf="@+id/share_button"
        android:contentDescription="@string/description_share_icon" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?actionBarItemBackground"
        android:src="@drawable/camera_icon_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        android:contentDescription="@string/description_camera_image_button" />


</androidx.constraintlayout.widget.ConstraintLayout>